@@ -174,7 +174,7 @@ Then we use our M0 Line macro assembler to convert our assembly into hex2 format
 Then we need to assemble that hex into our desired program:
 ./bin/vm --rom roms/stage1_assembler-2 --tape_01 temp2 --tape_02 roms/forth --memory 48K
 
-roms/forth should with the sha256sum of 8b31c02b98d85bcc8049d3a56395abb8a1494d153be5536c528dbfd553889477
+roms/forth should with the sha256sum of 9b84fb95fd00d83f27a2d9b96472a78baa40f10f4b1868624e299bfb16cda399
 
 Our forth will first attempt to evaluate any code in tape_01 and then evaluate any code that the user types in
 (Otherwise there is no way for a forth fan to have a chance against the lisp in terms of being able to bootstrap something cool)
